--- a/MovieApp/Views/MovieDatas/Edit.cshtml
+++ b/MovieApp/Views/MovieDatas/Edit.cshtml
@@ -51,7 +51,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"><button type="button" class="btn btn-light">Back to list</button></a>
 </div>
 
 @section Scripts {
