--- a/MovieApp/Views/MovieDatas/Index.cshtml
+++ b/MovieApp/Views/MovieDatas/Index.cshtml
@@ -1,65 +1,43 @@
-﻿@model IEnumerable<MovieApp.Models.MovieData>
+﻿@using Microsoft.AspNetCore.Authorization
+@model IEnumerable<MovieApp.Models.MovieData>
+@inject IAuthorizationService AuthorizationService
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Movie List</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MovieName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MovieDirector)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReleaseDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Genre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImageName)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MovieName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MovieDirector)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImageName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MovieId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MovieId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MovieId">Delete</a>
-            </td>
-        </tr>
+@*@if ((await AuthorizationService.AuthorizeAsync(User, "Administrator")).Succeeded)*@
+
+    <p>
+        <a asp-action="Create"><button type="button" class="btn btn-primary btn-lg">Add new movie</button> </a>
+    </p>
+            
+
+    @{
+        System.Diagnostics.Debug.Assert(Model != null, nameof(Model) + " != null");
+    }
+    @foreach (var item in Model) {
+
+  
+    <div class="movie-card">
+		<div class="color-overlay">
+            <img src="@("~/image/"+ item.ImageName)" asp-append-version="true" alt=""/> 
+			<div class="movie-content">
+				<div class="movie-header">
+					<h1 class="movie-title">@Html.DisplayFor(modelItem => item.MovieName)</h1>
+					<h4 class="movie-info">@Html.DisplayFor(modelItem => item.Genre)</h4>
+				</div>
+				<p class="movie-desc">@Html.DisplayFor(modelItem => item.Description)</p>
+			</div>
+               <div class=edit-buttons>
+                   <a asp-action="Edit"><button type="button" class="btn btn-secondary">Edit</button></a>
+                   <a asp-action="Delete"><button type="button" class="btn btn-danger">Delete</button></a>
+                </div> 
+		</div>
+	</div>
+
+   
 }
-    </tbody>
-</table>
+
