--- a/MovieApp/Views/PersonalCollections/Create.cshtml
+++ b/MovieApp/Views/PersonalCollections/Create.cshtml
@@ -13,11 +13,6 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="OwnerID" class="control-label"></label>
-                <input asp-for="OwnerID" class="form-control" />
-                <span asp-validation-for="OwnerID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="SelectMovieName" class="control-label"></label>
                 <input asp-for="SelectMovieName" class="form-control" />
                 <span asp-validation-for="SelectMovieName" class="text-danger"></span>
@@ -40,9 +35,11 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"><button type="button" class="btn btn-light">Back to list</button></a>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
