--- a/MovieApp/Views/PersonalCollections/Delete.cshtml
+++ b/MovieApp/Views/PersonalCollections/Delete.cshtml
@@ -12,12 +12,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OwnerID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OwnerID)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SelectMovieName)
         </dt>
         <dd class = "col-sm-10">
@@ -35,11 +29,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.WatchDate)
         </dd>
+
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CollectionId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a asp-action="Index"><button type="button" class="btn btn-light">Back to list</button></a>
     </form>
 </div>
