--- a/MovieApp/Views/Reviews/Delete.cshtml
+++ b/MovieApp/Views/Reviews/Delete.cshtml
@@ -12,12 +12,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OwnerID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OwnerID)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MovieName)
         </dt>
         <dd class = "col-sm-10">
@@ -45,7 +39,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ReviewId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+         <a asp-action="Index"><button type="button" class="btn btn-light">Back to list</button></a>
     </form>
 </div>
