--- a/MovieApp/Views/Reviews/Details.cshtml
+++ b/MovieApp/Views/Reviews/Details.cshtml
@@ -11,12 +11,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OwnerID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OwnerID)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MovieName)
         </dt>
         <dd class = "col-sm-10">
@@ -43,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ReviewId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ReviewId"> <a asp-action="Index"><button type="button" class="btn btn-secondary">Edit</button></a></a> |
+    <a asp-action="Index"><button type="button" class="btn btn-light">Back to list</button></a>
 </div>
