--- a/MovieApp/Views/Reviews/Edit.cshtml
+++ b/MovieApp/Views/Reviews/Edit.cshtml
@@ -14,11 +14,6 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ReviewId" />
             <div class="form-group">
-                <label asp-for="OwnerID" class="control-label"></label>
-                <input asp-for="OwnerID" class="form-control" />
-                <span asp-validation-for="OwnerID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="MovieName" class="control-label"></label>
                 <input asp-for="MovieName" class="form-control" />
                 <span asp-validation-for="MovieName" class="text-danger"></span>
@@ -46,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+     <a asp-action="Index"><button type="button" class="btn btn-light">Back to list</button></a>
 </div>
 
 @section Scripts {
