--- a/MovieApp/Views/MovieDatas/Delete.cshtml
+++ b/MovieApp/Views/MovieDatas/Delete.cshtml
@@ -37,7 +37,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="MovieId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
         <a asp-action="Index"><button type="button" class="btn btn-light">Back to list</button></a>
     </form>
 </div>
