--- a/MovieApp/Views/Shared/_Layout.cshtml
+++ b/MovieApp/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
         </main>
     </div>
 
-    <footer class="footer">
+    <footer class="footer fixed-bottom">
             <div class="p-3 text-center" style="background-color: rgba(0, 0, 0, 0.2);">
                 <a class="text-decoration-none text-white">Projekt ASP.Net Michał Dudzik 12987</a>
             </div>
