Published Db on free hostin Visual updates Changed appsettings.json for an online repo

--- a/MovieApp/Views/Reviews/Index.cshtml
+++ b/MovieApp/Views/Reviews/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.Score)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ReviewDate)
+                Date
             </th>
             <th></th>
         </tr>
